--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -227,3 +227,17 @@ header ul li a{
     border-bottom-left-radius: 5px;
   }
 }
+@media (max-width:355px){
+  .content .textBox h2 {
+    font-size: 2.0em;
+  }
+  .conten .imgBox{
+    justify-content: flex-start;
+  }
+  .content .imgBox img {
+    max-width: 280px;
+}
+  .thumb li img {
+    max-width: 50px;
+  }
+}
