--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -68,7 +68,7 @@ header ul li a{
   font-size: 1.2em;
   font-weight: 900;
 }
-.content .texBox p{
+.content .textBox p{
   color: #333;
 }
 .content .textBox a{
